Add some style in the stylesheet/application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,39 @@
   <head>
     <title>BlogAssignment</title>
     <%= csrf_meta_tags %>
+		<%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Pacifico' %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+  	<div id="sidebar">
+  		<ul>
+  			<li class="category">Website</li>
+  			<li><%= link_to "Blog", root_path %></li>
+  			<li>About</li>
+  		</ul>	
+
+  		<ul>
+  			<li class="category">Social</li>
+  			<li><a href="https://www.instagram.com/torijeniluc/?hl=en">Instagram</a></li>
+  			<li><a href="https://github.com/victoriajeniluc">Github</li>
+  			<li><a href="mailto:victoriajeniluc@gmail.com">E-Mail</a></li>
+  		</ul>
+  		<p class="sign_in">Admin Login</p>
+  	</div>
+
+  	<div id="main_content">
+  		<div id="header">
+  			<p>All Posts</p>
+
+  			<div class="buttons">
+  				<button class="button"><%= link_to "New Post", new_post_path %></button>
+  				<button class="button">Log Out</button>
+  			</div>
+  		</div>
+  	</div>
     <%= yield %>
   </body>
 </html>
