--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New Post</h1>
+<div id="new-post-form">
+	<h1>New Post</h1>
 	
 	<% if @errors %> 
 		<ul>
@@ -24,3 +25,4 @@
 			<%= f.submit %> 
 		</p>
 	<% end %> 
+</div>	
