--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,12 @@
   				<button class="button">Log Out</button>
   			</div>
   		</div>
-  	</div>
-    <%= yield %>
+
+      <!-- this will give us a message from rails when we submit a new post or login in... etc.  -->
+      <% flash.each do |name, msg| %> 
+        <%= content_tag(:div, msg, class: "alert") %> 
+      <% end %>     
+  	   <%= yield %> 
+    </div>
   </body>
 </html>
