--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,7 +74,7 @@ a {
 	.sign_in {
 		position: absolute;
 		right: 2.5em;
-		color: 	#909090;
+		color: #484848;
 		top: 8%;
 		font-size: .8em;
 	}
@@ -87,6 +87,10 @@ a {
 
 .show-content {
 	text-align:center;
+}
+
+#errors > ul {
+	list-style-type: none;
 }
 
 input[type=text], textarea {
