--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,19 @@
 <div id="new-post-form">
 	<h1>New Post</h1>
-	
+
+
 	<% if @errors %> 
-		<ul>
-			<% @errors.each do |error| %> 
-				<li><%= error %></li>
-			<% end %> 
-		</ul>
-	<% end %> 
+		<div id="errors">
+			<ul>
+				<!-- pluralize does is... anything past the count of 1, it will automatically pluralize the word for us.-->
+				<h3><%= pluralize(@errors.count, "error") %> prevented this post from saving!</h3>
+				<% @errors.each do |error| %> 
+					<li><%= error %></li>
+				<% end %> 
+			</ul>
+		</div>	 
+	<% end %>
+
 
 	<%= form_for :post, url: posts_path do |f| %> 
 		<p>
